--- a/src/index.css
+++ b/src/index.css
@@ -171,7 +171,7 @@ h4 {
 
 
 .hero-section {
-  height: 480px;
+  height: auto;
   z-index: -1;
   background-image: url(https://www.linkpicture.com/q/shiromani-kant-mo3FOTG62ao-unsplash.jpg);
   background-repeat: no-repeat;
