--- a/src/index.css
+++ b/src/index.css
@@ -171,13 +171,13 @@ h4 {
 
 
 .hero-section {
-  height: auto;
   z-index: -1;
   background-image: url(https://www.linkpicture.com/q/shiromani-kant-mo3FOTG62ao-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
   position: relative;
+  height: auto;
 }
 
 
@@ -185,7 +185,7 @@ h4 {
   content: "";
   display: block;
   width: 100%;
-  height: 100%;
+  height: auto;
   background: black;
   opacity: 0.75;
   position: absolute;
@@ -583,9 +583,9 @@ text{
   }
 }  
 .hero-section__container {
-  padding-top: 200px;
   height: 100%;
   display: grid;
+  align-items: center;
   grid-template-rows:repeat(4, 0.1fr);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
